# genesis-oracle

./: COLAB_INSTRUCTIONS.md  index.md  pyproject.toml  train_pinn.py
data/: datastream.npy
docs/: Ascension_Report.md  Fabric_Report.md
src/: architecture.py  data_generator.py  fabric_pinn.py  flax_core.py  jax_optimization.py  jax_swarm.py  legacy_swarm.py  oracle_setup.py  pinn_data.py  train_colab.py
