[project]
name = "genesis-oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "keras>=3.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.26",
    "scipy>=1.10.0",
    "tensorflow>=2.16.1",
]
