[project]
name = "genesis-oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "matplotlib>=3.7.0",
    "numpy>=2.0",
    "scipy>=1.10.0",
    "plotly>=5.15.0",
]
